--- a/src/assets/styles/modules/slider-buttons.scss
+++ b/src/assets/styles/modules/slider-buttons.scss
@@ -25,6 +25,12 @@
   &--wide {
     width: 100%;
     justify-content: space-between;
+
+    #{$comp}__svg {
+      @media (max-width: ($breakpoint - 1px)) {
+        width: 11px;
+      }
+    }
   }
 
   &__item {
