--- a/src/views/components/modals.pug
+++ b/src/views/components/modals.pug
@@ -59,7 +59,7 @@ mixin login-modal
             input.form__input(type="password" placeholder="Пароль" required) 
           .form__item 
             button.button.button--wide(data-form-button='123' required)
-              |Отправить
+              |Войти
       .tabs-block(data-tabs-block='')
         form.form(action="/" data-form='1')
           p.login-modal__text.login-modal__inner
