--- a/src/views/pages/booking.pug
+++ b/src/views/pages/booking.pug
@@ -126,4 +126,4 @@ block content
                       |Цена с НДС по курсу ЦА на 25.06.2021
                     .cart-page__card-btn 
                       +button.button--wide 
-                        |Перейти к оформлению
+                        |Продолжить оформление
