--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -28,7 +28,7 @@ block content
                     |товар
                 .cart-page__top-col
                   .cart-page__top-label 
-                    |количество
+                    |кол-во
                 .cart-page__top-col
                   .cart-page__top-label 
                     |цена
@@ -111,23 +111,7 @@ block content
                           .tooltip__container   
                             |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
               .cart-page__card-bot
-                ul.cart-page__card-list
-                  li.cart-page__card-thing 
-                    .cart-page__card-row 
-                      .cart-page__card-col
-                        p.cart-page__caption
-                          |Сумма без скидки, ₽
-                      .cart-page__card-col
-                        .cart-page__card-text 
-                          |- 109 906
-                  li.cart-page__card-thing 
-                    .cart-page__card-row 
-                      .cart-page__card-col
-                        p.cart-page__caption
-                          |Скидка, ₽
-                      .cart-page__card-col
-                        .cart-page__card-text 
-                          |- 20 906
+                
                 .cart-page__card-row 
                   .cart-page__card-col
                     .cart-page__card-price 
