--- a/src/views/pages/docs.pug
+++ b/src/views/pages/docs.pug
@@ -45,7 +45,7 @@ block content
                       each item in data.selectValues.brand
                         option(value=item)
                           |#{item} 
-    section.section.section--md
+    section.section.section--sm
       .container 
         .docs-page__row 
           .docs-page__col
