--- a/src/views/pages/publications-article.pug
+++ b/src/views/pages/publications-article.pug
@@ -46,7 +46,7 @@ block content
             img(src="assets/images/publication-article.jpg", alt="")
           .margin-top 
             h3.publications-page__section-title 
-              |Перед пилением
+              |Пиление
             .publications-page__section-content 
               p.publications-page__section-text 
                 |При установке новой ленточной пилы на станок обязательно произведите её обкатку (приработку). Это процесс пиления заготовки с пониженной скоростью вращения пилы при медленном опускании пильной рамы на заготовку. Скорость пилы снижают на 30%, а подачу рамы вполовину от рабочих режимов. Время непрерывного резания при обкатке 15-20 минут.
@@ -60,7 +60,7 @@ block content
             img(src="assets/images/publication-article-2.jpg", alt="")
           .margin-top 
             h3.publications-page__section-title 
-              |Перед пилением
+              |Окончания пиления
             .publications-page__section-content 
               p.publications-page__section-text 
                 |После окончания пиления заготовок обязательно очищайте рабочий стол, ведущий и ведомый шкивы станка от накопившейся стружки. Периодически проверяйте ведущий и ведомый шкивы станка на параллельность и отсутствие биений, а также износ твердосплавных пластин и подшипников направляющих. Своевременно меняйте щётку очистки пилы и СОЖ.
@@ -74,3 +74,8 @@ block content
                         img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
               .publications-page__section-buttons
                 +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
+          a.publications-page__button.margin-top(href="#") 
+            .publications-page__button-icon
+              +big-arrow-svg.publications-page__button-svg
+            .publications-page__button-text 
+              |Вернуться
