--- a/src/views/pages/publications-detail.pug
+++ b/src/views/pages/publications-detail.pug
@@ -58,3 +58,8 @@ block content
                         img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
               .publications-page__section-buttons
                 +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
+          a.publications-page__button.margin-top(href="#") 
+            .publications-page__button-icon
+              +big-arrow-svg.publications-page__button-svg
+            .publications-page__button-text 
+              |Вернуться
