--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -18,7 +18,7 @@ block content
             .search-page__col 
               input.search-page__input(type="text")
             .search-page__col 
-              +button.button--wide
+              +button.button--wide.button--search
                 |Поиск
         .section__row.margin-top
           .section__col
