--- a/src/views/pages/services-detail.pug
+++ b/src/views/pages/services-detail.pug
@@ -24,7 +24,8 @@ block content
           .section 
             h2.services-page__title 
               |Мы предлагаем следующий #[br] инструментальный ряд:
-            ul.features-list.margin-top.margin-top--md
-              each item in ['Токарный и фрезерный корпусный инструмент;', 'Сменные пластины, алмазные пластины;', 'Осевой инструмент (фрезы и сверла из твердого сплава и быстрорежущей стали);', 'Инструмент для резьбонарезания (метчики, раскатники, резьбофрезы, плашки и центровочные сверла);', 'Вспомогательный инструмент для станков с ЧПУ;', 'Вспомогательный инструмент к фрезерным станкам с ЧПУ;', 'Патроны токарные гидравлические фирмы AUTOSTRONG;', 'Шкафы и тумбочки для оснастки;', 'Прецизионные тиски для станов с ЧПУ фирмы HOMGE;', 'Станки для заточки свёрл и фрез.']
-                li.features-list__item
-                  |#{item}
+            .services-page__list
+              ul.features-list.margin-top.margin-top--md
+                each item in ['Токарный и фрезерный корпусный инструмент;', 'Сменные пластины, алмазные пластины;', 'Осевой инструмент (фрезы и сверла из твердого сплава и быстрорежущей стали);', 'Инструмент для резьбонарезания (метчики, раскатники, резьбофрезы, плашки и центровочные сверла);', 'Вспомогательный инструмент для станков с ЧПУ;', 'Вспомогательный инструмент к фрезерным станкам с ЧПУ;', 'Патроны токарные гидравлические фирмы AUTOSTRONG;', 'Шкафы и тумбочки для оснастки;', 'Прецизионные тиски для станов с ЧПУ фирмы HOMGE;', 'Станки для заточки свёрл и фрез.']
+                  li.features-list__item
+                    |#{item}
