--- a/src/assets/styles/modules/discont.scss
+++ b/src/assets/styles/modules/discont.scss
@@ -32,6 +32,13 @@
     @media (max-width: ($breakpoint - 1px)) {
       padding-left: 8px 11px;
     }
+
+    #{$comp}__text {
+      @include fsl(24px, 120%);
+      @media (max-width: ($breakpoint - 1px)) {
+        @include fsl(16px);
+      }
+    }
   }
 
   &__text {
