--- a/src/assets/styles/modules/form.scss
+++ b/src/assets/styles/modules/form.scss
@@ -59,9 +59,15 @@
   
   &__textarea {
     padding: 15px 12px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 10px 12px;
+    }
 
     width: 100%;
     min-height: 100px;
+    @media (max-width: ($breakpoint - 1px)) {
+      min-height: 80px;
+    }
 
     @include fsl(14px, 140%);
     border-radius: 4px;
