--- a/src/assets/styles/pages/equip-page.scss
+++ b/src/assets/styles/pages/equip-page.scss
@@ -223,8 +223,9 @@
     border-bottom: 1px solid $color-light-gray;
 
     tr {
-      padding: 24px 0;
+      padding: 16px 0;
       display: flex;
+      align-items: center;
     }
   }
   &__table-body {
