--- a/src/assets/styles/pages/profile-page.scss
+++ b/src/assets/styles/pages/profile-page.scss
@@ -169,6 +169,7 @@
     }
 
     &:nth-child(2) {
+      margin-top: 35px;
       width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
       @media (max-width: ($breakpoint - 1px)) {
         display: none;
