--- a/src/assets/styles/pages/publications-page.scss
+++ b/src/assets/styles/pages/publications-page.scss
@@ -117,8 +117,17 @@
   }
 
   &__button {
+    padding: 18px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 5px 0;
+    }
+
     display: flex;
     align-items: center;
+    justify-content: center;
+
+    border: 1px solid $color-light-gray;
+    border-radius: 4px;
   }
   &__button-icon {
     display: flex;
@@ -219,7 +228,7 @@
     @include fsl(12px, 140%);
   }
   &__section-container {
-    width: 50%;
+    width: 57%;
     @media (max-width: ($breakpoint - 1px)) {
       width: 100%;
     }
