--- a/src/assets/styles/pages/services-page.scss
+++ b/src/assets/styles/pages/services-page.scss
@@ -102,11 +102,26 @@
     }
   }
 
+  &__text {
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(14px, 140%);
+    }
+  }
+
   &__image {
     display: flex;
     align-items: center;
 
     border-radius: 4px;
+    @media (max-width: ($breakpoint - 1px)) {
+      border-radius: 2px;
+    }
     overflow: hidden;
+  }
+
+  &__list {
+    @media (min-width: $breakpoint) {
+      width: calc(#{$col-part-d} * 5 - #{$col-gap-d});
+    }
   }
 }
