--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -41,7 +41,7 @@ block content
                       .cart-page__item-col 
                         .cart-page__item-container 
                           .cart-page__item-caption 
-                            |цена
+                            |кол-во
                           .booking-page__product-text 
                             |12 шт.
                       .cart-page__item-col
@@ -59,7 +59,7 @@ block content
                       .cart-page__item-col
                         .cart-page__item-container
                           .cart-page__item-caption 
-                            |цена
+                            |итого
                           .cart-page__item-price 
                             |€ 1279.2
           .booking-page__product-col
