--- a/src/views/components/navigation.pug
+++ b/src/views/components/navigation.pug
@@ -1,15 +1,16 @@
 mixin navigation 
-  ul.breadcrumbs 
-    li.breadcrumbs__item 
-      a.breadcrumbs__link(href="#") 
-        |Главная
-    if(attributes.items)
-      each item in attributes.items
-        li.breadcrumbs__item 
-          a.breadcrumbs__link(href="#")
-            |#{item}
-    li.breadcrumbs__item 
-      .breadcrumbs__text 
-        |#{attributes.page}
+  .breadcrumbs
+    ul.breadcrumbs__list
+      li.breadcrumbs__item 
+        a.breadcrumbs__link(href="#") 
+          |Главная
+      if(attributes.items)
+        each item in attributes.items
+          li.breadcrumbs__item 
+            a.breadcrumbs__link(href="#")
+              |#{item}
+      li.breadcrumbs__item 
+        .breadcrumbs__text 
+          |#{attributes.page}
   h1.nav-title
     |#{attributes.page}
