--- a/src/views/pages/contacts.pug
+++ b/src/views/pages/contacts.pug
@@ -5,13 +5,14 @@ block content
   .contacts-page 
     section.section.section--first 
       .container 
-        ul.breadcrumbs 
-          li.breadcrumbs__item 
-            a.breadcrumbs__link(href="#") 
-              |Главная
-          li.breadcrumbs__item 
-            .breadcrumbs__text 
-              |Контакты
+        .breadcrumbs
+          ul.breadcrumbs__list
+            li.breadcrumbs__item 
+              a.breadcrumbs__link(href="#") 
+                |Главная
+            li.breadcrumbs__item 
+              .breadcrumbs__text 
+                |Контакты
         .contacts-page__row
           h1.nav-title
             |Контакты
