--- a/src/views/pages/docs.pug
+++ b/src/views/pages/docs.pug
@@ -73,9 +73,9 @@ block content
               +docs-card
     section.section.section--last.margin-top
       .container 
-        .section__button 
+        .button-show-wrapper 
           .button-show 
             .button-show__text 
               |Показать еще
             .button-show__icon 
-              +arrow-svg
+              +arrow-svg.button-show__svg
