--- a/src/views/pages/publications-detail.pug
+++ b/src/views/pages/publications-detail.pug
@@ -7,19 +7,20 @@ block content
     section.publications-page__section
       .container 
         .publications-page__container
-          ul.breadcrumbs 
-            li.breadcrumbs__item 
-              a.breadcrumbs__link(href="#") 
-                |Главная
-            li.breadcrumbs__item 
-              a.breadcrumbs__link(href="#") 
-                |Публикации
-            li.breadcrumbs__item 
-              a.breadcrumbs__link(href="#") 
-                |Технологии
-            li.breadcrumbs__item 
-              .breadcrumbs__text 
-                |Выставка «Металлообработка-2020»
+          .breadcrumbs
+            ul.breadcrumbs__list
+              li.breadcrumbs__item 
+                a.breadcrumbs__link(href="#") 
+                  |Главная
+              li.breadcrumbs__item 
+                a.breadcrumbs__link(href="#") 
+                  |Публикации
+              li.breadcrumbs__item 
+                a.breadcrumbs__link(href="#") 
+                  |Технологии
+              li.breadcrumbs__item 
+                .breadcrumbs__text 
+                  |Выставка «Металлообработка-2020»
           h2.publications-page__title   
             |Выставка «Металлообработка-2020»
           .publications-page__section-cat
