--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -42,11 +42,11 @@ block content
             .search-page__grid 
               - for (i = 0; i < 12; i++)
                 +product-card
-            .section__button 
+            .button-show-wrapper
               .button-show 
                 .button-show__text 
                   |Показать еще
                 .button-show__icon 
-                  +arrow-svg
+                  +arrow-svg.button-show__svg
         .search-page__result.margin-top.margin-top--md
           |Поиск не дал результатов
