--- a/src/assets/styles/modules/breadcrumbs.scss
+++ b/src/assets/styles/modules/breadcrumbs.scss
@@ -9,12 +9,20 @@
   }
 
   display: flex;
-  flex-wrap: wrap;
   @media (max-width: ($breakpoint - 1px)) {
-    flex-wrap: nowrap;
     width: calc(100% + (16px * 2));
     overflow-x: scroll;
+    overflow-y: hidden;
     @include scrollbar-hidden;
+  }
+
+  &__list {
+    display: flex;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    @media (max-width: ($breakpoint - 1px)) {
+      flex-wrap: nowrap;
+    }
   }
 
   &__item {
