--- a/src/views/pages/instruments-card-1.pug
+++ b/src/views/pages/instruments-card-1.pug
@@ -10,19 +10,83 @@ include ../components/product-card
 
 block content 
   .instruments-card
+    -
+      var ddata = [
+        {
+          title: 'Модель',
+          text: 'N206A5',
+        },
+        {
+          title: 'Наружный диаметр (А)	',
+          text: '169мм',
+        },
+        {
+          title: 'Высота (В)',
+          text: '91мм',
+        },
+        {
+          title: 'Диаметр под планшайбу (С)',
+          text: '140мм',
+        },
+        {
+          title: 'Межцентровое расстояние (D)',
+          text: '20мм',
+        },
+        {
+          title: 'Диаметр конуса (F)',
+          text: '82.536мм',
+        },
+        {
+          title: 'Диаметр окружности под крепление к планшайбе (G)',
+          text: '116мм',
+        },
+        {
+          title: 'Диаметр окружности под крепление к шпинделю (H)',
+          text: '104.78мм',
+        },
+        {
+          title: 'Крепежные винты (K)',
+          text: '6хМ10мм',
+        },
+        {
+          title: 'Проходное отверстие (L)',
+          text: '45мм',
+        },
+        {
+          title: 'Ширина паза (R)',
+          text: '12мм',
+        },
+        {
+          title: 'Ширина кулачка (T)',
+          text: '32мм',
+        },
+        {
+          title: 'Крепление тяги /размер резьбы (U)',
+          text: 'М55х2мм',
+        },
+        {
+          title: 'Диаметр резьбового кольца (W)',
+          text: '60мм',
+        },
+        {
+          title: 'Максимальная скорость',
+          text: '6000об/мин',
+        },
+      ]
     section.instruments-card__section
       .container
         .instruments-card__section-row 
           .instruments-card__section-col
             .instruments-card__section-breadcrumbs 
-              ul.breadcrumbs 
-                each item in ['Главная', 'Инструменты', 'Раскатники']
+              .breadcrumbs
+                ul.breadcrumbs__list
+                  each item in ['Главная', 'Инструменты', 'Раскатники']
+                    li.breadcrumbs__item 
+                      a.breadcrumbs__link(href="#") 
+                        |#{item}
                   li.breadcrumbs__item 
-                    a.breadcrumbs__link(href="#") 
-                      |#{item}
-                li.breadcrumbs__item 
-                  .breadcrumbs__text 
-                    |Раскатник r-d 371 iso2x m 4x0.7 2p
+                    .breadcrumbs__text 
+                      |Раскатник r-d 371 iso2x m 4x0.7 2p
             .instruments-card__section-slider
               .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                 .swiper-wrapper 
@@ -81,19 +145,19 @@ block content
             h2.instruments-card__inner
               |Характеристики
             ul.instruments-card__block-list 
-              - for (i = 0; i < 6; i++)
+              each item in ddata
                 li.instruments-card__block-item 
                   .instruments-card__block-text 
-                    |Диаметр - D(h8)	
+                    |#{item.title}	
                   .instruments-card__block-text 
-                    |14.00мм
+                    |#{item.text}
           .instruments-card__block-col
             .instruments-card__block-image 
               img(src="assets/images/instruments-card-2.jpg", alt="")
     section.section 
       .container
         h2.instruments-card__inner
-          |Характеристики
+          |Документация
         .grid-container
           - for (i = 0; i < 3; i++)
             +docs-card
@@ -104,7 +168,7 @@ block content
             |Аналогичные товары
           .instruments-card__buttons  
             +slider-buttons(prev='3' next='4')
-        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='3' data-slider-next='4')
+        .swiper-container.swiper-container--visible.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='3' data-slider-next='4')
           .swiper-wrapper 
             - for (i = 0; i < 12; i++)
               .swiper-slide 
@@ -116,7 +180,7 @@ block content
             |Сопутствующие категории товаров
           .instruments-card__buttons  
             +slider-buttons(prev='1' next='2')
-        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
+        .swiper-container.swiper-container--visible.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
           .swiper-wrapper 
             - for (i = 0; i < 3; i++)
               .swiper-slide
