--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -10,19 +10,47 @@ include ../components/product-card
 
 block content 
   .instruments-card
+    -
+      var ddata = [
+        {
+          title: 'Диаметр - D(h8)',
+          text: '14.00мм',
+        },
+        {
+          title: 'Допуск',
+          text: '0/-0.027',
+        },
+        {
+          title: 'Хвостовик - d',
+          text: '14мм',
+        },
+        {
+          title: 'Длина рабочей части - l',
+          text: '54мм',
+        },
+        {
+          title: 'Общая длина - L',
+          text: '107мм',
+        },
+        {
+          title: 'Покрытие',
+          text: 'оксидирование',
+        },
+      ]
     section.instruments-card__section
       .container
         .instruments-card__section-row 
           .instruments-card__section-col
             .instruments-card__section-breadcrumbs 
-              ul.breadcrumbs 
-                each item in ['Главная', 'Инструменты', 'Раскатники']
+              .breadcrumbs
+                ul.breadcrumbs__list
+                  each item in ['Главная', 'Инструменты', 'Раскатники']
+                    li.breadcrumbs__item 
+                      a.breadcrumbs__link(href="#") 
+                        |#{item}
                   li.breadcrumbs__item 
-                    a.breadcrumbs__link(href="#") 
-                      |#{item}
-                li.breadcrumbs__item 
-                  .breadcrumbs__text 
-                    |Раскатник r-d 371 iso2x m 4x0.7 2p
+                    .breadcrumbs__text 
+                      |Раскатник r-d 371 iso2x m 4x0.7 2p
             .instruments-card__section-slider
               .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                 .swiper-wrapper 
@@ -95,12 +123,12 @@ block content
             h2.instruments-card__inner
               |Характеристики
             ul.instruments-card__block-list 
-              - for (i = 0; i < 6; i++)
+              each item in ddata
                 li.instruments-card__block-item 
                   .instruments-card__block-text 
-                    |Диаметр - D(h8)	
+                    |#{item.title}
                   .instruments-card__block-text 
-                    |14.00мм
+                    |#{item.text}
           .instruments-card__block-col
             .instruments-card__block-image 
               img(src="assets/images/instruments-card.jpg", alt="")
@@ -118,7 +146,7 @@ block content
             |Аналогичные товары
           .instruments-card__buttons  
             +slider-buttons(prev='3' next='4')
-        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='3' data-slider-next='4')
+        .swiper-container.swiper-container--visible.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='3' data-slider-next='4')
           .swiper-wrapper 
             - for (i = 0; i < 12; i++)
               .swiper-slide 
@@ -130,7 +158,7 @@ block content
             |Сопутствующие категории товаров
           .instruments-card__buttons  
             +slider-buttons(prev='1' next='2')
-        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
+        .swiper-container.swiper-container--visible.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
           .swiper-wrapper 
             - for (i = 0; i < 3; i++)
               .swiper-slide
