--- a/src/views/pages/instruments-detail.pug
+++ b/src/views/pages/instruments-detail.pug
@@ -32,11 +32,11 @@ block content
               .instruments-page__container 
                 - for (i = 0; i < 12; i++)
                   +product-card
-              .section__button 
+              .button-show-wrapper
                 .button-show 
                   .button-show__text 
                     |Показать еще
                   .button-show__icon 
-                    +arrow-svg
+                    +arrow-svg.button-show__svg
   +docs-modal
   +filters-menu
