--- a/src/views/pages/publications.pug
+++ b/src/views/pages/publications.pug
@@ -70,9 +70,9 @@ block content
                             |#{item.text}
                   .arrow-icon 
                     +big-arrow-svg.arrow-icon__svg
-            .section__button 
+            .button-show-wrapper
               .button-show 
                 .button-show__text 
                   |Показать еще
                 .button-show__icon 
-                  +arrow-svg
+                  +arrow-svg.button-show__svg
