--- a/src/views/pages/equip-card.pug
+++ b/src/views/pages/equip-card.pug
@@ -67,7 +67,7 @@ block content
         .instruments-card__row.instruments-card__inner
           h2 
             |Аксессуары
-        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
+        .swiper-container.swiper-container--visible.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
           .swiper-wrapper 
             - for (i = 0; i < 3; i++)
               .swiper-slide
